2007-02-05  Dave Brolley  <brolley@redhat.com>

	* elflink.h: Add support for Toshiba MeP.
	* reloc.c: Likewise.
	* Makefile.am:  Likewise.
	* config.bfd: Likewise.
	* configure.in: Likewise.
	* archures.c: Likewise.
	* targets.c: Likewise.
	* elf.c: Likewise.
	* mep-relocs.pl: New file.
	* cpu-mep.c: New file.
	* elf32-mep.c: New file.
	* bfd-in2.h: Regenerate.
	* po/POTFILES.in: Likewise.
	* libbfd.h: Regenerate.
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* elflink.c (evaluate_complex_relocation_symbols): Check for
	STT_SRELC for global symbols.
	(perform_complex_relocations): Renamed to
	perform_complex_relocation and now examines only one relocation.
	(elf_link_input_bfd): Don't call perform_complex_relocations.
	* elf-bfd.h (bfd_elf_perform_complex_relocation_: New prototype.
	* elf32-mep.c (mep_elf_howto_table): Add R_RELC.
	(OD,OS,OU): #undefs corrected to N, S and U repectively.
	(mep_reloc_type_lookup): Handle BFD_RELOC_RELC.
	(complex_reloc_installation_howto): Removed.
	(mep_info_to_howto_rela): Remove special case for r_type==0xff.
	(mep_elf_relocate_section): Call bfd_elf_perform_complex_relocation.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* Contribute the following changes:
	2004-07-23  Richard Sandiford  <rsandifo@redhat.com>

	* elflink.c (perform_complex_relocation): Detect relocations against
	undefined symbols.

	2002-04-02  DJ Delorie  <dj@redhat.com>

	* elflink.h (resolve_symbol): Handle weak symbols.

	2002-03-07  Graydon Hoare  <graydon@redhat.com>

	* elflink.h (perform_complex_relocations): Minor debug message
	touchup.

	2002-01-23  Graydon Hoare  <graydon@redhat.com>

	* bfd-in2.h: Add signed RELC (SRELC) symbols.
	* elf.c (swap_out_syms): Likewise.
	* elfcode.h (elf_slurp_symbol_table): Likewise.
	(elf_symbol_flags): Likewise.
	* syms.c: Likewise.
	* elflink.h (eval_symbol): Introduce signed RELC evaluation.
	(evaluate_complex_relocation_symbols): Likewise.